--- a/app/assets/stylesheets/order.scss
+++ b/app/assets/stylesheets/order.scss
@@ -114,3 +114,12 @@
         width: 100%;
     }
 }
+
+.button-order-addr {
+    background: none;
+    width: 100%;
+
+    color: #777;
+    border: 1px solid #777;
+    box-shadow: none;
+}
