--- a/app/assets/stylesheets/animenz.scss
+++ b/app/assets/stylesheets/animenz.scss
@@ -269,6 +269,7 @@ input[type="password"] {
 .pos-relative { position: relative; }
 .overflow-auto { overflow: auto; }
 .no-padding { padding: 0 !important; }
+.padding-05 { padding: 0.5em; }
 .padding-1 { padding: 1em; }
 .line-height-2 { line-height: 2; }
 .indent { text-indent: 2em; }
@@ -292,3 +293,6 @@ input[type="password"] {
     @include media-mobile {
         display: block !important; }
 }
+.width-full { width: 100%; }
+.width-half { width: 50%; }
+.border-box { box-sizing: border-box; }
