--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -113,25 +113,7 @@
 
 <% content_for :script do %>
 <script>
-
-function validatePhoneNumber(phone) {
-    // var r = /\d{11}/;
-    // www.jianshu.com/p/e8477fdccbe9
-    var r = /^1(3[0-9]|4[57]|5[0-35-9]|8[0-9]|7[0687])-?\d{4}-?\d{4}$/;
-    return r.test(phone);
-}
-
-function submitValidation(e) {
-    var phone = document.getElementById('submit-input-phone').value;
-    if (!validatePhoneNumber(phone)) {
-        alert('电话号码格式有问题，请检查并重试！');
-        e.stopImmediatePropagation();
-        e.preventDefault();
-        return false;
-    }
-}
-
-document.getElementById('submit-submit-btn').addEventListener('click', submitValidation);
+document.getElementById('submit-submit-btn').addEventListener('click', phoneValidation);
 </script>
 
 <script>
