Update mail and message

--- a/app/views/order_mailer/delete_mail.html.erb
+++ b/app/views/order_mailer/delete_mail.html.erb
@@ -5,4 +5,4 @@
 		<%= seat.area.recital.city + '站' + seat.area.name + seat.get_position %>
 	</li>
 <% end %>
-<p>删除的座位已被系统回收，如若非您所谓，请立刻与管理员联系，感谢您对本网站的支持</p>
+<p>删除的座位已被系统回收，如若非您所为，请立刻与管理员联系，感谢您对本网站的支持</p>
