--- a/app/views/visitors/_chengdu_content.html.erb
+++ b/app/views/visitors/_chengdu_content.html.erb
@@ -1,5 +1,5 @@
 <div class="align-center font-larger line-height-2">
-    <div>请登录大麦网购买 <a href="http://www.damai.cn">www.damai.cn</a></div>
+    <div>请登录大麦网购买 <a href="http://item.damai.cn/97716.html">点此前往</a></div>
     <div class="font-smaller">
         <div>大麦网服务热线：1010-3721 400-610-3721</div>
         <div>活动详询请咨询 15519026686</div>
