--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -5,6 +5,7 @@
     </div> -->
     <div class="coverflow-cont">
         <div class="coverflow">
+            <%= render 'visitors/vote_sheet' %>
             <% @recitals.each do |recital| %>
             <div class="coverflow-item">
                 <div class="coverflow-content">
