--- a/app/views/visitors/_vote_sheet.html.erb
+++ b/app/views/visitors/_vote_sheet.html.erb
@@ -1,54 +1,27 @@
 <div class="coverflow-item">
     <div class="coverflow-content">
         <div class="coverflow-card">
-            <div class="coverflow-card-image">
-                <%= image_tag recital.index_image.url %>
+            <div class="coverflow-card-image vote-card-image">
+                <%= image_tag 'img1.png' %>
             </div>
         </div>
         <div class="coverflow-overlay-text">
-            <%= link_to recital_path recital do %>
-                <button class="recital-detail-btn">查看详情</button>
-            <% end %>
-            <div class="recital-info-bottom">
-                    <div class="coverflow-recital-title"><%= recital.city %>站</div>
-                    <div class="hide-mobile">
-                        <%= render 'visitors/chengdu_content' %>
-                    </div>
-                    <button class="recital-detail-btn hide-desktop" data-toggle="modal" data-target="#modal-chengdu-overlay">
-                        查看详情
-                    </button>
-                    <br />
-                <% end %>
+            <div class="vote-info-bottom">
+                <div class="align-center vote-descr-text">
+                    <div class="vote-activity-name">♪ 最想让A叔改编的歌曲 ♪</div>
+                    <div>投票活动正在进行</div>
+                </div>
             </div>
+            <%= link_to 'http://tieba.baidu.com/p/4497624033' do %>
+                <button class="vote-detail-btn">查看详情</button>
+            <% end %>
         </div>
         <div class="coverflow-overlay-right recital-info-right">
             <div class="coverflow-recital-title">
-                <%= recital.split_city %>
-                <div>站</div>
-            </div>
-            <div class="coverflow-recital-date">
-                <% if recital.start_time %>
-                    <div><%= recital.start_time.month %></div>
-                    <div>月</div>
-                    <div><%= recital.start_time.day %></div>
-                    <div>日</div>
-                <% end %>
-                <!--<%= recital.start_time.strftime('%-m 月 %-d 日') unless recital.start_time.nil? %>-->
-            </div>
-            <div class="recital-status">
-                <% if recital.sold_out? %>
-                  <% if recital.city != '成都' %>
-                        已<br />预<br />订<br />完
-                  <% else %>
-                        已<br />售<br />完
-                  <% end %>
-                <% else %>
-                  <% if recital.city != '成都' %>
-                        正<br />在<br />预<br />订
-                  <% else %>
-                        正<br />在<br />售<br />票
-                  <% end %>
-                <% end %>
+                <div>投</div>
+                <div>票</div>
+                <div>活</div>
+                <div>动</div>
             </div>
         </div>
     </div>
