--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -187,16 +187,38 @@ button.vote-detail-btn {
 
 button.vote-detail-btn {
     margin-bottom: 5em;
+    @include mq($until: desktop) {
+        margin-bottom: 4em;    
+    }
+    @include media-mobile {
+        margin-bottom: 1em;
+    }
 }
 
 .vote-descr-text .vote-activity-name {
     font-size: 30px;
     margin-bottom: 10px;
     color: #eacaa0;
+    @include mq($until: desktop) {
+        font-size: 20px;
+        margin-bottom: 2em;    
+    }
+    @include media-mobile {
+        font-size: 18px;
+        margin-bottom: 1em;
+    }
 }
 
 .vote-descr-text {
     font-size: 25px;
     font-weight: bolder;
     margin-bottom: 2.5em;
+    @include mq($until: desktop) {
+        font-size: 20px;
+        margin-bottom: 2em;    
+    }
+    @include media-mobile {
+        font-size: 15px;
+        margin-bottom: 1em;
+    }
 }
