--- a/app/views/order_mailer/pay_time_mail.html.erb
+++ b/app/views/order_mailer/pay_time_mail.html.erb
@@ -1,8 +1,16 @@
 <p>您好 <%= @user.name %>！</p>
-<p></p>
-<% @order.seats.each do |seat| %>
-	<li>
-		<%= seat.area.recital.city + '站' + seat.area.name + seat.get_position %>
-	</li>
-<% end %>
-<p>删除的座位已被系统回收，如若非您所为，请立刻与管理员联系，感谢您对本网站的支持</p>
+<article>
+	<header>
+		Animenz动漫钢琴音乐会武汉站付款通知： 付款时间5月1日至5月7日，主办方指定汇款账户：
+	</header>
+	<section>
+		<ul>
+			<li>工商银行：6212262402015869551，户名：杨倩，开户行：工商银行贵阳纪念塔支行</li>
+			<li>建设银行：6217007100022904754，户名：杨倩，开户行：建行贵阳乌当支行</li>
+			<li>支付宝账号：15519026686</li>
+		</ul>
+	</section>
+	<section>
+		付款成功后请将订票预留姓名+订票预留电话+订票座位+付款信息截图统一发送至邮箱584730793@qq.com，武汉音乐会纸票将在5月底统一快递发货，届时将有快递订单号发送至您的订票预留手机号，<a href="www.yuxianglishun.cn">www.yuxianglishun.cn</a>网站将继续接受武汉站预订，详询请咨询15519026686（杨小姐）
+	</section>
+</article>
