--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -70,7 +70,8 @@
             </ul>
         </section>
         <section class="info-footer">
-            付款成功后请将订票预留姓名+订票预留电话+订票座位+付款信息截图统一发送至邮箱584730793@qq.com，武汉音乐会纸票将在5月底统一快递发货，届时将有快递订单号发送至您的订票预留手机号，<a href="www.yuxianglishun.cn">www.yuxianglishun.cn</a>网站将继续接受武汉站预订，详询请咨询15519026686（杨小姐）
+            <h3 class="important-message">付款成功后请将订票预留姓名+订票预留电话+订票座位+付款信息截图统一发送至邮箱584730793@qq.com</h3>
+            武汉音乐会纸票将在5月底统一快递发货，届时将有快递订单号发送至您的订票预留手机号，<a href="www.yuxianglishun.cn">www.yuxianglishun.cn</a>网站将继续接受武汉站预订，详询请咨询15519026686（杨小姐）
         </section>
     </article>
 </div>
