Add each orders shown in administrate

--- a/app/views/admin/recitals/show.html.erb
+++ b/app/views/admin/recitals/show.html.erb
@@ -62,3 +62,30 @@ as well as a link to its edit page.
     <% end %>
   </dd>
 </dl>
+
+<table class="collection-data">
+  <thead>
+    <tr>
+      <th>姓名</th>
+      <th>电话</th>
+      <th>地址</th>
+      <th>价格</th>
+      <th>创建时间</th>
+      <th>状态</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @orders.each do |order| %>
+      <tr class="table__row" data-url=<%= "/admin/orders/#{order.slug}" %> tabindex="0" role="link" >
+        <td><%= order.name %></td>
+        <td><%= order.phone %></td>
+        <td><%= order.address %></td>
+        <td><%= order.price %></td>
+        <td><%= order.created_at.strftime("%Y-%m-%d") %></td>
+        <td><%= order.status %></td>
+        <td><%= link_to '编辑', "/admin/orders/#{order.slug}/edit" %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
