Add volunteer sheet to index

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -8,6 +8,7 @@
             <% if false %>
                 <%= render 'visitors/vote_sheet' %>
             <% end %>
+            <%= render 'visitors/volunteer_apply' %>
             <% @recitals.each do |recital| %>
             <div class="coverflow-item">
                 <div class="coverflow-content">
