--- a/app/views/order_mailer/success_mail.html.erb
+++ b/app/views/order_mailer/success_mail.html.erb
@@ -5,4 +5,15 @@
 		<%= seat.area.recital.city + '站' + seat.area.name + seat.get_position %>
 	</li>
 <% end %>
-<p>感谢您的预订，正式付款日期我们将在之后通知您，带来不便敬请谅解！</p>
+<p>感谢您的预订，请在当日内支付款项，付款方式如下，带来不便敬请谅解！</p>
+<section>
+    <ul>
+        <li>工商银行：6212262402015869551，户名：杨倩，开户行：工商银行贵阳纪念塔支行</li>
+        <li>建设银行：6217007100022904754，户名：杨倩，开户行：建行贵阳乌当支行</li>
+        <li>支付宝账号：15519026686</li>
+    </ul>
+</section>
+<section>
+    <h3>付款成功后请将订票预留姓名+订票预留电话+订票座位+付款信息截图统一发送至邮箱584730793@qq.com</h3>
+    <%= @recital.city %>音乐会纸票将在5月底统一快递发货，届时将有快递订单号发送至您的订票预留手机号，<a href="www.yuxianglishun.cn">www.yuxianglishun.cn</a>网站将继续接受<%= @recital.city %>站预订，详询请咨询15519026686（杨小姐）
+</section>
