--- a/app/views/order_mailer/pay_time_mail.html.erb
+++ b/app/views/order_mailer/pay_time_mail.html.erb
@@ -1,7 +1,7 @@
 <p>您好 <%= @user.name %>！</p>
 <article>
 	<header>
-		Animenz动漫钢琴音乐会武汉站付款通知： 付款时间5月1日至5月7日，主办方指定汇款账户：
+		Animenz动漫钢琴音乐会广州站付款通知： 付款时间6月5日24:00前，主办方指定汇款账户：
 	</header>
 	<section>
 		<ul>
@@ -11,6 +11,6 @@
 		</ul>
 	</section>
 	<section>
-		付款成功后请将订票预留姓名+订票预留电话+订票座位+付款信息截图统一发送至邮箱584730793@qq.com，武汉音乐会纸票将在5月底统一快递发货，届时将有快递订单号发送至您的订票预留手机号，<a href="www.yuxianglishun.cn">www.yuxianglishun.cn</a>网站将继续接受武汉站预订，详询请咨询15519026686（杨小姐）
+		付款成功后请将订票预留姓名+订票预留电话+订票座位+付款信息截图统一发送至邮箱584730793@qq.com，广州音乐会纸票将在5月底统一快递发货，届时将有快递订单号发送至您的订票预留手机号，<a href="www.yuxianglishun.cn">www.yuxianglishun.cn</a>网站将继续接受广州站预订，详询请咨询15519026686（杨小姐）
 	</section>
 </article>
