--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -94,7 +94,7 @@
         </section>
         <section class="info-footer">
             <h3 class="important-message">付款成功后请将订票预留姓名+订票预留电话+订票座位+付款信息截图统一发送至邮箱584730793@qq.com</h3>
-            <%= @recital.city %>音乐会纸票将在5月底统一快递发货，届时将有快递订单号发送至您的订票预留手机号，<a href="www.yuxianglishun.cn">www.yuxianglishun.cn</a>网站将继续接受<%= @recital.city %>站预订，详询请咨询15519026686（杨小姐）
+            <%= @recital.city %>音乐会纸票将在之后不久统一快递发货，届时将有快递订单号发送至您的订票预留手机号，<a href="www.yuxianglishun.cn">www.yuxianglishun.cn</a>网站将继续接受<%= @recital.city %>站预订，详询请咨询15519026686（杨小姐）
         </section>
     </article>
 </div>
