--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -31,7 +31,7 @@
 <!--             <a href="#" class="btn-buy-buy-buy align-center">
                 立即购买
             </a> -->
-            <% if @recital.sold_out? or @recital.id is 5 %>
+            <% if @recital.sold_out? or @recital.id == 5 %>
                 <%= link_to '已售完', '#', class: 'btn-buy-buy-buy align-center' %>
             <% else %>
                 <%= link_to '查看座位图', recital_areas_path(@recital), :class => 'btn-buy-buy-buy align-center' %>
