--- a/app/views/admin/recitals/show.html.erb
+++ b/app/views/admin/recitals/show.html.erb
@@ -74,6 +74,7 @@ as well as a link to its edit page.
       <th>订单号</th>
       <th>创建时间</th>
       <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -87,6 +88,11 @@ as well as a link to its edit page.
         <td><%= order.slug %></td>
         <td><%= order.created_at.strftime("%Y-%m-%d") %></td>
         <td><%= link_to '编辑', "/admin/orders/#{order.slug}/edit" %></td>
+        <td><%= link_to '删除', "/admin/orders/#{order.slug}",
+          class: "table__action--destroy",
+          method: :delete,
+          data: { confirm: '删除该订单？' }
+        %></td>
       </tr>
     <% end %>
   </tbody>
