--- a/app/views/order_mailer/delivery_delay_mail.html.erb
+++ b/app/views/order_mailer/delivery_delay_mail.html.erb
@@ -1,2 +1,2 @@
 <p>尊敬的<%= @user.name %>！</p>
-<p>由于武汉站包厢区域的系统问题，所有包厢区域的票将推迟到本月底才能为您发快递，发快递时会将快递订单号发送到您的邮箱，给您带来不便敬请谅解！</p>
+<p>由于武汉站包厢区域的系统问题，所有包厢区域的票将推迟到本月底才能为您发快递，发快递时会将快递订单号发送到您的邮箱，给您带来不便敬请谅解！如果您并未订购包厢区域的票，请忽略该邮件，感谢您的配合</p>
