--- a/app/views/order_mailer/success_mail.html.erb
+++ b/app/views/order_mailer/success_mail.html.erb
@@ -5,7 +5,7 @@
 		<%= seat.area.recital.city + '站' + seat.area.name + seat.get_position %>
 	</li>
 <% end %>
-<p>感谢您的预订，请在当日内支付款项，付款方式如下，带来不便敬请谅解！</p>
+<p>感谢您的预订，因暂未能开通在线支付，给您带来的不便敬请谅解. 请在当日内支付款项，付款方式如下，带来不便敬请谅解！</p>
 <section>
     <ul>
         <li>工商银行：6212262402015869551，户名：杨倩，开户行：工商银行贵阳纪念塔支行</li>
@@ -15,5 +15,5 @@
 </section>
 <section>
     <h3>付款成功后请将订票预留姓名+订票预留电话+订票座位+付款信息截图统一发送至邮箱584730793@qq.com</h3>
-    音乐会纸票将在之后不久统一快递发货，届时将有快递订单号发送至您的订票预留手机号，<a href="www.yuxianglishun.cn">www.yuxianglishun.cn, 详询请咨询15519026686（杨小姐）
+    收到付款邮件三天内给您快递票纸，同时将快递订单号发至您的邮箱方便您查询，演出详询：0851-86802933（9:00-18:00），15519026686杨小姐
 </section>
