Update pay time mail

--- a/app/views/order_mailer/pay_time_mail.html.erb
+++ b/app/views/order_mailer/pay_time_mail.html.erb
@@ -1,16 +1,15 @@
 <p>您好 <%= @user.name %>！</p>
 <article>
 	<header>
-		Animenz动漫钢琴音乐会广州站付款通知： 付款时间6月5日24:00前，主办方指定汇款账户：
+		Animenz动漫钢琴音乐会付款通知： 付款时间：6月25日至7月3日，主办方指定汇款账户：
 	</header>
 	<section>
 		<ul>
-			<li>工商银行：6212262402015869551，户名：杨倩，开户行：工商银行贵阳纪念塔支行</li>
-			<li>建设银行：6217007100022904754，户名：杨倩，开户行：建行贵阳乌当支行</li>
-			<li>支付宝账号：15519026686</li>
+			<li>支付宝账号：463201301@qq.com  户名：李嘉斌</li>
+			<li>建设银行：账号：6217007100013334797   户名：李嘉斌  开户行：贵阳市京瑞支行综合柜</li>
 		</ul>
 	</section>
 	<section>
-		付款成功后请将音乐会城市+订票预留姓名+订票预留电话+订票座位+付款信息截图统一发送至邮箱584730793@qq.com，广州音乐会纸票将在之后不久统一快递发货，届时将有快递订单号发送至您的订票预留手机号，<a href="www.yuxianglishun.cn">www.yuxianglishun.cn</a>网站将继续接受广州站预订，详询请咨询15519026686（杨小姐）
+		☆重要提示：请仔细核对账户信息后再汇款！！并且不要向主办方指定以外的账户汇款！！成功转账后请将【1.订票站次+2.座位号+3.订票预留姓名+4.订票预留电话+5.付款信息截图】发至邮箱382068944@qq.com，音乐会票纸将在7月初统一快递发货，届时将有快递订单号发至您的订票预留手机号，www.yuxianglishun.cn 网站将继续接受购票, 详询请咨询QQ：463201301 电话13984155725（李先生）
 	</section>
 </article>
