--- a/app/assets/stylesheets/aggregation.scss
+++ b/app/assets/stylesheets/aggregation.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the aggregation controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+form.search-data {
+    color: black;
+    text-align: center;
+    margin-top: 5em;
+}
+
+.search-result {
+	text-align: center;
+	margin-top: 10em;
+
+	.result {
+		margin-left: auto;
+		margin-right: auto;
+	}
+	
+	th, td {
+		padding: 20px;
+	}
+}
