--- a/app/views/aggregation/index.html.erb
+++ b/app/views/aggregation/index.html.erb
@@ -1,22 +1,40 @@
-<table>
-	<thead>
-		<tr>
-			<th>姓名</th>
-			<th>住址</th>
-			<th>电话</th>
-			<th>座位</th>
-			<th>价格</th>
-		</tr>
-	</thead>
-	<tbody>
-		<% @orders.each do |order| %>
-		<tr>
-			<td><%= order.name %></td>
-			<td><%= order.address %></td>
-			<td><%= order.phone %></td>
-			<td><%= order.seats.collect {|s| "#{s.area.name}#{s.locate_x}排#{s.locate_y}号 #{s.price.price}元"}.join(" ")%></td>
-			<td><%= order.price %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
+<form action="/aggregation" method="get" class="search-data">
+	<input id="city" name="city" placeholder="城市"/>
+	<input id="area" name="area" placeholder="区域"/>
+	<input id="row" name="row" placeholder="排数"/>
+	<input id="col" name="col" placeholder="列号"/>
+	<input type="submit" value="查询"/>
+</form>
+
+<div class="search-result">
+	<table class="result">
+		<thead>
+			<tr>
+				<th>姓名</th>
+				<th>电话</th>
+				<th>住址</th>
+				<th>状态</th>
+				<th></th>
+				<th></th>
+			</tr>
+		</thead>
+		<tbody>
+			<% if @orders %>
+			<% @orders.each do |order| %>
+			<tr>
+				<td><%= order.name %></td>
+				<td><%= order.phone %></td>
+				<td><%= order.address %></td>
+				<td><%= I18n.t(order.status) %></td>
+				<td><%= link_to '编辑', "/admin/orders/#{order.slug}/edit" %></td>
+        		<td><%= link_to '删除', "/admin/orders/#{order.slug}",
+          			class: "table__action--destroy",
+         			method: :delete,
+          			data: { confirm: '删除该订单？' }
+        		%></td>
+        	</tr>
+        	<% end %>
+			<% end %>
+		</tbody>
+	</table>
+</div>
