--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -32,7 +32,7 @@
                 立即购买
             </a> -->
 
-			<% if @recital.id == 3 %>
+			<% if false %>
 				<a href="#" class="btn-buy-buy-buy align-center">调试中</a>
 			<% else %>
 			<%= link_to '查看座位图', recital_areas_path(@recital), :class => 'btn-buy-buy-buy align-center' %>
