Removed volunteer card.

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -9,7 +9,9 @@
                 <%= render 'visitors/vote_sheet' %>
             <% end %>
             <%= render 'visitors/master_class' %>
-            <%= render 'visitors/volunteer_apply' %>
+			<% if false %>
+				<%= render 'visitors/volunteer_apply' %>
+			<% end %>
             <% @recitals.each do |recital| %>
             <div class="coverflow-item">
                 <div class="coverflow-content">
