--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -91,7 +91,13 @@
         </section>
         <section class="info-footer">
             <h3 class="important-message">付款成功后请将音乐会城市+订票预留姓名+订票预留电话+订票座位+付款信息截图统一发送至邮箱584730793@qq.com</h3>
-            收到付款邮件三天内给您快递票纸，同时将快递订单号发至您的邮箱方便您查询，演出详询：0851-86802933（9:00-18:00），15519026686杨小姐
+            <% if @recital.id == 2 %>
+            因临近演出，为了避免收件人因特殊原因不能及时收到票纸，广州站票从今天起概不快递，请7月28日演出当天 19:30 分前凭订票信息现场领票，谢谢。
+            <% else %>
+            收到付款邮件三天内给您快递票纸，同时将快递订单号发至您的邮箱方便您查询。
+            <% end %>
+            <br />
+            演出详询：0851-86802933（9:00-18:00），15519026686杨小姐
         </section>
     </article>
 </div>
