Update recital status

--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -117,7 +117,7 @@
         </section>
         <section class="info-footer">
             <h3 class="important-message">☆重要提示：请仔细核对账户信息后再汇款！！并且不要向主办方指定以外的账户汇款！！成功转账后请将【1.订票站次（<%= @recital.city %>）+2.座位号+3.订票预留姓名+4.订票预留电话+5.付款信息截图】发至邮箱382068944@qq.com</h3>
-            <%= @recital.city %>站音乐会票纸将在7月初统一快递发货，届时将有快递订单号发至您的订票预留手机号，www.yuxianglishun.cn 网站将继续接受<%= @recital.city %>站购票, 详询请咨询QQ：463201301 电话13984155725（李先生）
+            因临近演出，为了避免收件人因特殊原因不能及时收票，票纸从今天开始概不快递请在音乐会当天开始前现场领票, 详询请咨询QQ：463201301 电话13984155725（李先生）
         </section>
     </article>
 </div>
