--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -32,7 +32,11 @@
                 立即购买
             </a> -->
 
+			<% if @recital.id == 3 %>
+				<a href="#" class="btn-buy-buy-buy align-center">调试中</a>
+			<% else %>
 			<%= link_to '查看座位图', recital_areas_path(@recital), :class => 'btn-buy-buy-buy align-center' %>
+			<% end %>
         </div>
     </div>
 </div>
@@ -91,13 +95,7 @@
         </section>
         <section class="info-footer">
             <h3 class="important-message">付款成功后请将音乐会城市+订票预留姓名+订票预留电话+订票座位+付款信息截图统一发送至邮箱584730793@qq.com</h3>
-            <% if @recital.id == 2 %>
-            因临近演出，为了避免收件人因特殊原因不能及时收到票纸，广州站票从今天起概不快递，请7月28日演出当天 19:30 分前凭订票信息现场领票，谢谢。
-            <% else %>
-            收到付款邮件三天内给您快递票纸，同时将快递订单号发至您的邮箱方便您查询。
-            <% end %>
-            <br />
-            演出详询：0851-86802933（9:00-18:00），15519026686杨小姐
+            收到付款邮件三天内给您快递票纸，同时将快递订单号发至您的邮箱方便您查询，演出详询：0851-86802933（9:00-18:00），15519026686杨小姐
         </section>
     </article>
 </div>
@@ -108,7 +106,7 @@
     <article class="intent line-height-2">
         <section>
             <h3 class="info-header">
-            预订了<%= @recital.city %>站Animenz动漫钢琴音乐会门票的用户可以进行付款了！付款时间：6月25日至7月10日，主办方指定汇款账户：
+            预订了<%= @recital.city %>站Animenz动漫钢琴音乐会门票的用户可以进行付款了！请在下单当天内通过如下方式付款，主办方指定汇款账户：
             </h3>
         </section>
         <section class="pay-methods">
@@ -119,7 +117,7 @@
         </section>
         <section class="info-footer">
             <h3 class="important-message">☆重要提示：请仔细核对账户信息后再汇款！！并且不要向主办方指定以外的账户汇款！！成功转账后请将【1.订票站次（<%= @recital.city %>）+2.座位号+3.订票预留姓名+4.订票预留电话+5.付款信息截图】发至邮箱382068944@qq.com</h3>
-            因临近演出，为了避免收件人因特殊原因不能及时收票，票纸从今天开始概不快递请在音乐会当天开始前现场领票, 详询请咨询QQ：463201301 电话13984155725（李先生）
+            <h3 class="important-message">因临近演出，为了避免收件人因特殊原因不能及时收票，票纸从今天开始概不快递请在音乐会当天开始前,凭电话以及支付记录，在音乐会现场点领票, 详询请咨询QQ：463201301 电话13984155725（李先生）</h3>
         </section>
     </article>
 </div>
