--- a/app/views/recitals/show.html.erb
+++ b/app/views/recitals/show.html.erb
@@ -32,8 +32,8 @@
                 立即购买
             </a> -->
 
-			<% if @recital.id == false %>
-				<a href="#" class="btn-buy-buy-buy align-center">调试中</a>
+			<% if @recital.id == 3 %>
+				<a href="#" class="btn-buy-buy-buy align-center">停止网售</a>
 			<% else %>
 			<%= link_to '查看座位图', recital_areas_path(@recital), :class => 'btn-buy-buy-buy align-center' %>
 			<% end %>
@@ -99,7 +99,7 @@
         </section>
     </article>
 </div>
-<% elsif @recital.id == 3 or @recital.id == 4 %>
+<% elsif @recital.id == 4 %>
 <br/>
 <div class="outer-container light-panel">
     <h2 class="align-center">付款通知</h2>
@@ -118,6 +118,16 @@
         <section class="info-footer">
             <h3 class="important-message">☆重要提示：请仔细核对账户信息后再汇款！！并且不要向主办方指定以外的账户汇款！！成功转账后请将【1.订票站次（<%= @recital.city %>）+2.座位号+3.订票预留姓名+4.订票预留电话+5.付款信息截图】发至邮箱382068944@qq.com</h3>
             <h3 class="important-message">因临近演出，为了避免收件人因特殊原因不能及时收票，票纸从今天开始概不快递请在音乐会当天开始前,凭电话以及支付记录，在音乐会现场点领票, 详询请咨询QQ：463201301 电话13984155725（李先生）</h3>
+        </section>
+    </article>
+</div>
+<% elsif @recital.id == 3 %>
+<br/>
+<div class="outer-container light-panel">
+    <h2 class="align-center">购票注意事项</h2>
+    <article class="intent line-height-2">
+        <section class="info-footer">
+            <h3 class="important-message">目前厦门站还剩有部分实体票，因数量不多，加上临近演出，不再提供网售，请各位需要的用户直接到音乐会现场购买, 详询请咨询QQ：463201301 电话13984155725（李先生）</h3>
         </section>
     </article>
 </div>
